# ChemML

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  ci.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: git-ci.yml  quality-checks.yml
chemml/: __init__.py
chemml/core/chem/: __init__.py  molecule_utils.py
chemml/core/data/: __init__.py  data_utils.py
chemml/core/models/: __init__.py  ml_models.py
chemml/ui/assets/: __init__.py  colors.py  icons.py  stylesheet.py
chemml/ui/controllers/: __init__.py  csv_controller.py  ml_controller.py  plot_controller.py
chemml/ui/views/: __init__.py  csv_view.py  main_view.py  ml_view.py  plot_view.py
chemml/ui/widgets/: __init__.py  molecule_widgets.py  plot_dialogs.py
chemml/utils/: logging_config.py
data_sets/: tepid_test.csv  test.csv
data_sets/testing_datasets/: test_dataset.csv
gui/: __init__.py  csv_view.py  gui.py  ml_advanced_view.py  ml_view.py  plot_view.py  sample-gui.py  sample_gui.py
ml_backend/: ml_backend.py  model_configs.py
tests/: conftest.py  test_ml_backend.py  test_ml_controller.py  test_ml_view.py
tests/gui/: test_csv_view.py  test_gui.py  test_ml_advanced_view.py  test_ml_view.py  test_plot_view.py  test_sample_gui.py
tests/utils/: test_data_utils.py  test_plotting_utils.py
utils/: __init__.py  color_assets.py  data_utils.py  gui_utils.py  logging_config.py  plotting_utils.py
