[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.10"
dependencies = [
    # Add your main project dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt",  # Since you have GUI tests
    "ruff>=0.2.0",
]

[tool.ruff]
# Exclude files and directories from ruff checks
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
]

line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and isort (I) rules
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
